Tests and swagger